# github-stats

./: .editorconfig  CHANGELOG.md  Justfile  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/disabled-workflows/: deploy-preview.yml
.github/other-configurations/: labeler.yml  labels.yml
.github/super-linter-configurations/: .eslintrc.yml
.github/workflows/: code-checks.yml  code-quality.yml  code-test.yml  codeql-analysis.yml  deploy-preview.yml  deploy.yml  pull-request-checks.yml  pull-request-tasks.yml  release.yml  sync-labels.yml
analyser/: analyser.just  pyproject.toml
analyser/application/: __main__.py  catalogued_repository.py  github_interactions.py  statistics.py
analyser/application/analysis/tests/: test_programming_lanaguage_analysis.py  test_repository_analysis.py
analyser/application/tests/: test_catalogued_repository.py  test_custom_logging.py  test_github_interactions.py  test_statistics.py
dashboard/: .eslintrc.json  .gitignore  README.md  astro.config.mjs  dashboard.just  eslint.config.js  jest.config.ts  jest.setup.ts  next-sitemap.config.mjs  next.config.mjs  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: BarChart.tsx  MainNav.tsx  NavBar.tsx  NavigationMenu.tsx  NavigationMenuItems.tsx  PieChart.tsx  Search.tsx
dashboard/data/: repository_statistics.json
dashboard/public/: robots.txt
data/: repository_statistics.json
docker/: docker-compose-local-test.yml  docker-compose-prod-test.yml  docker-compose.yml
docker/dashboard/: Dockerfile  nginx.conf
docker/end_to_end_tests/: Dockerfile
docs/: SECURITY.md  conventional-commits.md
docs/architectural_decision_records/: 001_Inital_tech_choices.md  002_migrate_typescript_framework.md  architectural_decision_records_format.md
githooks/: pre-commit
githooks/pre-commit-scripts/: gitleaks.sh  (+3 more)
tests/: .gitignore  pyproject.toml  tests.just
tests/end_to_end/features/: homepage.feature
tests/end_to_end/steps/: test_homepage.py  test_sitemap.py
tests/end_to_end/utils/: constants.py  driver.py  variables.py
tests/end_to_end/utils/pages/: homepage.py
tests/features/: sitemap.feature
tests/steps/: test_sitemap.py
(+23 files in other folders)
